fix: fixed weird gap between project description and image

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  background-color: var(--bg);
 
   --bg: #2E2E2E;
   --pink: #FDAFC2;
